# camlox

./: .gitignore  LICENSE  NOTES.md  README.md  camlox.opam  dune  dune-project  dune-workspace  run-tests.sh
lib/: chunk.ml  compiler.ml  compiler.mli  dbg.ml  dbg.mli  debug.ml  debug.mli  dune  err.ml  locals.ml  opcode.ml  scanner.ml  scanner.mli  string_arena.ml  string_val.ml  string_val.mli  table.ml  token.ml  value.ml  vector.ml  vector.mli  vm.ml  vm.mli
test/: run.py
test/class/: bad_init.expect  bad_init.lox  bad_init.lox.expect  bad_this.expect  bad_this.lox  bad_this.lox.expect  basic.expect  basic.lox  field_method.expect  field_method.lox  field_method_bad_argument.expect  field_method_bad_argument.lox  field_method_bad_argument.lox.expect  init.expect  init.lox  init.lox.expect  member1.lox  method.lox  method_inherit.lox  nested_instance.expect  nested_instance.lox  no_member.expect  no_member.lox  no_member.lox.expect  property.lox  property.lox.expect  super.expect  super.lox  super_closure.lox
test/func/: arith.lox  arith.lox.expect  bad_arity.expect  bad_arity.lox.expect  call.expect  call.lox  call.lox.expect  global_capture.lox  init_toplevel.expect  init_toplevel.lox  print.expect  print.lox  upvaltest.lox
test/perf/: fib.lox  zoo.lox
test/simple/: breakfast-compl.expect  comments.lox  greater.lox  less.lox  string_concat.lox  string_intern.lox  truth_table.lox  twolines.lox
test/stmt/: block.expect  block.lox  block.lox.expect  complex.expect  complex.lox  deeper_ifelse.expect  deeper_ifelse.lox  forloop.expect  forloop.lox  ifelse.lox  (+6 more)
(+2 files in other folders)
